syntax = "proto3";

package io.protostuff.it;

option java_package = "io.protostuff.it.message_test";

message ParentMsg {
    NestedMsg nested_msg = 1;
    repeated NestedMsg nested_repeated_msg = 2;
}

message NestedMsg {
    string name = 2;
}

message SimpleMessage {
    int32 int32 = 10;
    string string = 11;
    repeated int32 repeated_int32 = 12;
    repeated string repeated_string = 13;
}

message MessageWithoutFields {

}